After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706798 - webdavs files not acccessible to POSIX apps
webdavs files not acccessible to POSIX apps
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: fuse
1.16.x
Other Linux
: Normal major
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks: 715026
 
 
Reported: 2013-08-26 12:41 UTC by Stephen Parry
Modified: 2013-11-22 18:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dav: Don't ignore all XML nodes with no contents (1.47 KB, patch)
2013-10-11 20:25 UTC, Ross Lagerwall
none Details | Review
dav: Set file type to regular by default (1.52 KB, patch)
2013-10-11 21:07 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Stephen Parry 2013-08-26 12:41:44 UTC
Mounting webdavs share via GVFS (in my case using gigolo), remote file system should be accessible via gvfs-fuse at /run/user/<username>/gvfs/. Instead just get input/output errors when listing and reading files.
Steps to reproduce:
Use gigolo to connect to remote DAVS file storage using Actions -> Connect, Actions-> Open
Check connectivity via gvfs:

gvfs-ls davs://remoteuser@www.somesite.com/somepath
gvfs-cat davs://remoteuser@www.somesite.com/somepath/somefile.txt

In my case, these work fine. Now try:

ls -l /run/user/localuser/gvfs/dav\:host\=www.somesite.com\,ssl\=true\,user\=remoteuser/somepath
cat /run/user/localuser/gvfs/dav\:host\=www.somesite.com\,ssl\=true\,user\=remoteuser/somepath/somefile.txt

Get these errors:

ls: cannot access /run/user/parrysg/gvfs/dav:host=www.mainscreen.com,ssl=true,user=parry2sg/files/test.txt: Input/output error
:
:
cat: /run/user/parrysg/gvfs/dav:host=www.mainscreen.com,ssl=true,user=parry2sg/files/test.txt: Input/output error

This bug is present 1.16.1 (Ubuntu 13.04) but not 1.12.1 (Ubuntu 12.04)
This bug has been reported downstream.
Comment 1 Ross Lagerwall 2013-10-11 20:25:19 UTC
Created attachment 257055 [details] [review]
dav: Don't ignore all XML nodes with no contents

An empty resourcetype node is sent back by the server for normal files.
Don't ignore these nodes otherwise the stat information for normal files
is not set correctly.
Comment 2 Ross Lagerwall 2013-10-11 20:27:28 UTC
This patch fixes the problem.
Comment 3 Ross Lagerwall 2013-10-11 21:07:41 UTC
Created attachment 257058 [details] [review]
dav: Set file type to regular by default

Some servers send empty resourcetype nodes or don't send the node at all
for regular files (the spec says that it defaults to empty).  Set the
file type to regular by default.
Comment 4 Ross Lagerwall 2013-10-11 21:10:29 UTC
Ignore my earlier comment... the new patch fixes the problem, both for Apache (which sends empty resourcetype nodes for regular files) and lighttpd (which doesn't send any resourcetype nodes for regular files.
Comment 5 Ondrej Holy 2013-10-17 12:31:27 UTC
Review of attachment 257058 [details] [review]:

It looks good.
Comment 6 Ross Lagerwall 2013-10-25 04:46:56 UTC
Pushed to master as 2b251d6 and gnome-3-10 as f95829e.