dav: Set file type to regular by default

Some servers send empty resourcetype nodes or don't send the node at all
for regular files (the spec says that it defaults to empty).  Set the
file type to regular by default.

https://bugzilla.gnome.org/show_bug.cgi?id=706798